--- a/public/index.html
+++ b/public/index.html
@@ -807,7 +807,7 @@
             <p id="tools-used"></p>
           </div>
           <div class="result-card">
-            <h3>📊 דירוג יומי (לפי נכונות)</h3>
+            <h3>📊 דירוג יומי (לפי תשובות נכונות)</h3>
             <div id="ranking">טוען דירוג יומי...</div>
           </div>
           <div class="result-card">
@@ -820,6 +820,7 @@
           </div>
           <div class="result-card">
             <h3>🏷️ תגיות</h3>
+            <p>לחץ על תגית כדי לבצע חיפוש בגוגל.</p>
             <div id="tag-analysis"></div>
           </div>
           <div class="result-buttons">
@@ -1260,7 +1261,7 @@
       }
 
       function updateCumulativeScoreDisplay() {
-        cumulativeScoreDisplayElement.textContent = `ניקוד כולל: ${cumulativePlayerScore.toLocaleString()}`;
+        cumulativeScoreDisplayElement.textContent = `ניקוד כללי: ${cumulativePlayerScore.toLocaleString()}`;
       }
 
       function updateNicknameDisplay() {
@@ -1738,7 +1739,7 @@
       function createScorePopup(score) {
         const popup = document.createElement("div");
         popup.classList.add("score-popup");
-        popup.textContent = `\u200F+${score}`;
+        popup.textContent = `${score}+`;
         document.body.appendChild(popup);
 
         requestAnimationFrame(() => {
