פאנל ניהול חדש ומתוקן

--- a/public/admin.html
+++ b/public/admin.html
@@ -494,12 +494,11 @@
                 <section id="questions-section" class="card collapsible-section">
                     <div class="card-header-collapsible" role="button" tabindex="0" aria-expanded="false" aria-controls="questions-content">
                        <h2>ניהול שאלות</h2>
+                       <button id="add-question-btn" class="btn-success">שאלה חדשה</button> 
                        <span class="toggle-icon" aria-hidden="true">+</span>
                     </div>
                     <!-- Add Question button outside content, inside card -->
-                    <div class="add-question-separator">
-                         <button id="add-question-btn" class="btn-success">הוסף שאלה חדשה +</button>
-                    </div>
+
                     <div class="collapsible-content" id="questions-content" role="region" aria-labelledby="questions-header" aria-hidden="true">
                         <div id="filter-controls">
                              <div>
