שיפור פאנל ניהול

--- a/public/admin.html
+++ b/public/admin.html
@@ -433,7 +433,7 @@
 
                 <!-- Dashboard Section -->
                 <section id="dashboard-overview" class="card collapsible-section">
-                    <div class="card-header-collapsible" role="button" tabindex="0" aria-expanded="false" aria-controls="dashboard-content">
+                    <div class="card-header-collapsible" role="button" tabindex="0" aria-expanded="fal" aria-controls="dashboard-content">
                         <h2>סקירה כללית <span id="dashboard-date"></span></h2>
                         <div id="refresh-dashboard-container">
                             <button id="refresh-dashboard-btn" class="btn-icon btn-round" title="רענן נתונים">
