פאנל ניהול ניסיוני חדש, עדכון חוקי אבטחה לשמירת מידע, עדכון מייצר שמות משתמש

--- a/public/index.html
+++ b/public/index.html
@@ -1011,11 +1011,48 @@
           let cumulativePlayerScore = 0;
           let playerNickname = "";
 
-          // --- Nickname Generation ---
-          const animalsMale = ["קרוקודיל","קיפודן","קנגורו","ברווזן","נמר","אריה","זאב","דוב","תנין","פיל","ג'ירף","צבי","יגואר","ברדלס","גמל","שועל",];
-          const animalsFemale = ["נמלה","צרעה","פרפרית","צלופחית","ציפור","חתולה","ארנבת","עטלף","צפרדע","שפירית","ברווזה","יענה","טווסית","נחשית","עכברה","ינשופה",];
-          const attributesMale = ["אמיץ","חכם","מהיר","שקט","חזק","סקרן","נאמן","ירוק","כחול","אדום","צהוב","שחור","לבן","סגול","כתום","זהוב",];
-          const attributesFemale = ["אמיצה","חכמה","מהירה","שקטה","חזקה","סקרנית","נאמנה","ירוקה","כחולה","אדומה","צהובה","שחורה","לבנה","סגולה","כתומה","זהובה",];
+// חיות זכרים - מוכרים יותר, עם נגיעות מעניינות
+const animalsMale = [
+        // קלאסיים ומוכרים
+        "אריה", "נמר", "פיל", "זאב", "דוב", "שועל", "צבי", "סוס", "נשר", "ינשוף", "קוף", "גמל", "תנין", "צב", "קרנף", "היפופוטם", "יגואר", "ברדלס",
+        // ימיים מוכרים
+        "דולפין", "לוויתן", "פינגווין", "כלב ים", "אריה ים", "כריש", // כריש הוא מוכר, למרות שלא תמיד נתפס "חיובי" קלאסי
+        // מוכרים נוספים ומעט מיוחדים
+        "גורילה", "שימפנזה", "פנדה", "קואלה", "דביבון", "בונה", "אייל", "יעל", "פלמינגו", "תוכי", "אלפקה", "למור", "עצלן", "גיבון", "דרקון קומודו"
+      ]; // סה"כ: 39
+
+      // חיות נקבות - מקבילות ומוכרות
+      const animalsFemale = [
+        // מקבילות לזכרים + מוכרות מאוד
+        "לביאה", "נמרה", "פילה", "זאבה", "דובה", "שועלה", "צביה", "סוסה", "ינשופה", "קופה", "גמלה", "תנינה", "צבה", "קרנפית", // נקבת קרנף, פחות נפוץ אך קיים
+        "דולפינה", "פינגווינית", // נקבת פינגווין, פחות נפוץ אך קיים
+        "כלבת ים", "לביאת ים",
+        "גורילה", "שימפנזה", "פנדה", "קואלה", "דביבונית", "בונה", // בונה נחשב גם נקבה לעיתים קרובות
+        "איילה", "יעלה", "פלמינגו", // פלמינגו משמש לשני המינים
+        "תוכית", "אלפקה", "למור", // למור משמש לעיתים לשני המינים
+        "עצלנית", "ג'ירפה",
+        // חיות נקבה מוכרות נוספות
+        "חתולה", "כלבה", "פרה", "כבשה", "ציפור", "נמלה", "דבורה", "פרפרית", "יענה"
+      ]; // סה"כ: 42
+
+      // תכונות זכרים - חיוביות וממוקדות
+      const attributesMale = [
+        "אמיץ", "חכם", "מהיר", "שקט", "חזק", "סקרן", "נאמן",
+        "פיקח", "נבון", "למדן", "מתמיד", "נחוש", "חרוץ", "שקדן", "איתן",
+        "חקרן", "מתעניין", "פתוח", "יצירתי", "מנהיג", "אדיב", "רגוע",
+        "ממוקד", "מגן", "מיוחד", "זוהר", "שמח", "אנרגטי", "נלהב",
+        "אופטימי", "חיוני", "תוסס", "זריז", "מבין", "בעל תובנה", "מעורר השראה"
+      ]; // סה"כ: 36
+
+      // תכונות נקבות - חיוביות וממוקדות
+      const attributesFemale = [
+        "אמיצה", "חכמה", "מהירה", "שקטה", "חזקה", "סקרנית", "נאמנה",
+        "פיקחית", "נבונה", "למדנית", "מתמידה", "נחושה", "חרוצה", "שקדנית", "איתנה",
+        "חקרנית", "מתעניינת", "פתוחה", "יצירתית", "מנהיגה", "אדיבה", "רגועה",
+        "ממוקדת", "מגנה", "מיוחדת", "זוהרת", "שמחה", "אנרגטית", "נלהבת",
+        "אופטימית", "חיונית", "תוססת", "זריזה", "מבינה", "בעלת תובנה", "מעוררת השראה"
+      ]; // סה"כ: 36
+
           function generateRandomUsername() {
             const isMale = Math.random() < 0.5;
             const animals = isMale ? animalsMale : animalsFemale;
