שינוי שמות משתמש ארוכים

--- a/public/index.html
+++ b/public/index.html
@@ -1041,7 +1041,7 @@ const animalsMale = [
         "פיקח", "נבון", "למדן", "מתמיד", "נחוש", "חרוץ", "שקדן", "איתן",
         "חקרן", "מתעניין", "פתוח", "יצירתי", "מנהיג", "אדיב", "רגוע",
         "ממוקד", "מגן", "מיוחד", "זוהר", "שמח", "אנרגטי", "נלהב",
-        "אופטימי", "חיוני", "תוסס", "זריז", "מבין", "בעל תובנה", "מעורר השראה"
+        "אופטימי", "חיוני", "תוסס", "זריז", "מבין", "מהורהר", "נוצץ"
       ]; // סה"כ: 36
 
       // תכונות נקבות - חיוביות וממוקדות
@@ -1050,7 +1050,7 @@ const animalsMale = [
         "פיקחית", "נבונה", "למדנית", "מתמידה", "נחושה", "חרוצה", "שקדנית", "איתנה",
         "חקרנית", "מתעניינת", "פתוחה", "יצירתית", "מנהיגה", "אדיבה", "רגועה",
         "ממוקדת", "מגנה", "מיוחדת", "זוהרת", "שמחה", "אנרגטית", "נלהבת",
-        "אופטימית", "חיונית", "תוססת", "זריזה", "מבינה", "בעלת תובנה", "מעוררת השראה"
+        "אופטימית", "חיונית", "תוססת", "זריזה", "מבינה", "מהורהרת", "נוצצת"
       ]; // סה"כ: 36
 
           function generateRandomUsername() {
